1.iic.c文件中的搜索iic设备时，要使用指定设备的地址的写命令(|0)，来检测是否又改地址的设备回应；读命令会导致主机释放总线控制权；

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "lwrb.h": "c",
         "stddef.h": "c",
         "rtc.h": "c",
-        "key.h": "c"
+        "key.h": "c",
+        "iic.h": "c"
     },
     "cortex-debug.variableUseNaturalFormat": true
 }
